unpackaged/main/default/objects/Lead/fields/Convert_to_Case__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert to Case</label>
    <type>Checkbox</type>
</CustomField>