unpackaged/main/default/objects/Lead/fields/Days_to_Respond__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Respond__c</fullName>
    <formula>IF(ISNULL(Response_Time__c), 0,  Response_Time__c - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Respond</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>