unpackaged/main/default/objects/Lead/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <displayFormat>LD-{000000}</displayFormat>
    <label>Lead ID</label>
    <type>AutoNumber</type>
</CustomField>