unpackaged/main/default/objects/Lead/fields/Lead_Role__c.field-meta.xml
<CustomField>
    <fullName>Lead_Role__c</fullName>
    <label>Lead Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>