unpackaged/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company Acquisition</fullName>
            </value>
            <value>
                <fullName>Cultural &amp; Sales Training</fullName>
            </value>
            <value>
                <fullName>Currency Conversion for Acquirers</fullName>
            </value>
            <value>
                <fullName>Data &amp; Insights</fullName>
            </value>
            <value>
                <fullName>eCommerce Merchant solutions</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Payment Gateway</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Payments - ACH</fullName>
            </value>
            <value>
                <fullName>POS Merchant solutions</fullName>
            </value>
            <value>
                <fullName>Tax Free</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Client Cross Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>