unpackaged/main/default/objects/Lead/fields/SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>SLA_Met__c</fullName>
    <formula>IF(Days_to_Respond__c &gt; 3, &quot;No&quot;,
IF(AND(Days_to_Respond__c  &lt;= 3, Days_to_Respond__c &gt; 0), &quot;Yes&quot;,
IF(Days_to_Respond__c  = 0, &quot;No Response&quot;, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Met?</label>
    <type>Text</type>
</CustomField>