unpackaged/main/default/objects/Lead/fields/spam__c.field-meta.xml
<CustomField>
    <fullName>spam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>spam</label>
    <type>Checkbox</type>
</CustomField>