unpackaged/main/default/objects/Lead/fields/TF_Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>TF_Current_Provider__c</fullName>
    <label>TF Current Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TF_Current_Provider</valueSetName>
    </valueSet>
</CustomField>