unpackaged/main/default/objects/Lead/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <description>Marketing</description>
    <label>utm_term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>