unpackaged/main/default/objects/Lead/listViews/All_Open_Leads.listView-meta.xml
<ListView>
    <fullName>All_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Company_Sector__c</columns>
    <columns>Lead_Type__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>GCLID__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Days_to_Respond__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Leads</label>
</ListView>