unpackaged/main/default/objects/Lead/listViews/All_Qualified_Leads.listView-meta.xml
<ListView>
    <fullName>All_Qualified_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Lead_Type__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Qualified</value>
    </filters>
    <label>All Qualified Leads</label>
    <language>en_US</language>
</ListView>