unpackaged/main/default/objects/Lead/listViews/Cris_Retail_Forum_Leads.listView-meta.xml
<ListView>
    <fullName>Cris_Retail_Forum_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Company_Sector__c</columns>
    <columns>Lead_Type__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>GCLID__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Days_to_Respond__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Event,Retail Forum 2022</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Contacted,Open,Qualified,Unqualified</value>
    </filters>
    <label>Cris - Retail Forum Leads</label>
</ListView>