unpackaged/main/default/objects/Lead/listViews/Lead_1_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_1_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead 1</label>
    <queue>Lead_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>