unpackaged/main/default/objects/Lead/listViews/Lead_2_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_2_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead 2</label>
    <queue>Lead_2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>