unpackaged/main/default/objects/Lead/listViews/Lead_Management_3_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Management_3_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Management 3</label>
    <queue>Lead_Management_3</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>