unpackaged/main/default/objects/Lead/listViews/Lead_Management_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_Management_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Management</label>
    <queue>Lead_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>