unpackaged/main/default/objects/Lead/listViews/Leads_France_Lead.listView-meta.xml
<ListView>
    <fullName>Leads_France_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Leads France</label>
    <queue>Leads_France</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>