unpackaged/main/default/objects/Lead/listViews/Leads_Spain_Lead.listView-meta.xml
<ListView>
    <fullName>Leads_Spain_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Leads Spain</label>
    <queue>Leads_Spain</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>