unpackaged/main/default/objects/Lead/listViews/Merchant_Services_IT_Lead.listView-meta.xml
<ListView>
    <fullName>Merchant_Services_IT_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Merchant Services IT</label>
    <queue>Merchant_Services_IT</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>